infra/k8s/eb-depl.yaml
# ipCluster
apiVersion: v1
kind: Service
metadata:
  name: eb-srv
spec:
  selector:
    app: eb
  type: ClusterIP
  ports:
    - name: eb
      protocol: TCP
      port: 3005 #cluster port
      targetPort: 3005 #application port
