infra/k8s/moderation-depl.yaml
# ipcluster
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app: moderation
  type: ClusterIP
  ports:
    - name: moderation
      protocol: TCP
      port: 3004
      targetPort: 3004
