infra/k8s/posts-depl.yaml
# ipcluster
apiVersion: v1
kind: Service
metadata:
  name: posts-cluster-srv
spec:
  selector:
    app: posts
  type: ClusterIP
  ports:
    - name: posts
      protocol: TCP
      port: 3001
      targetPort: 3001
