infra/k8s/query-depl.yaml
# ipcluster
apiVersion: v1
kind: Service
metadata:
  name: query-srv
spec:
  selector:
    app: query
  type: ClusterIP
  ports:
    - name: query
      protocol: TCP
      port: 3003
      targetPort: 3003
